--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,15 @@ body {
     color: white;
     font-size: 1.6rem;
     font-family: Arial, sans-serif;
-    background-color: #070b22;
     background-size: 10px 10px;
+    background: linear-gradient(rgba(7, 11, 34, 0.9), rgba(7, 11, 34, 0.7)), 
+                url("../img/starry-sky.jpg");
+    /* background-image: url("../img/starry-sky.jpg"); */
+    background-size: cover;
+    background-position: center;
+    /* background-repeat: no-repeat; */
+    background-attachment: fixed;
+    background-color: #070b22;
 }
 
 
