--- a/css/styles.css
+++ b/css/styles.css
@@ -76,18 +76,14 @@ nav ul li a:hover {
 }
 
 /* Hero Unit*/
-.header {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.hero {
     align-items: center;
-    padding: 20px 200px;
-    margin: 2em 3em;
+    margin: 2% 15%;
     text-align: center;
     background-color: transparent;
 }
 
-header h1 {
+.hero h1 {
     color: #df9b07;
     font-size: 5em;
     font-weight: bold;
@@ -97,14 +93,10 @@ header h1 {
 }
 
 #button-group {
-    /* display: flex;
-    flex-wrap: wrap; */
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* Default: 4 columns */
-    /* justify-content: center; */
-    /* gap: 10px; */
     gap: 3vw 2vw;
-    padding: 20px 40px;
+    margin: 30px 40px;
 }
 
 .button {
@@ -128,37 +120,37 @@ header h1 {
 
 
 @media screen and (max-width: 1120px) {
-  /* header {width: 96%;} */
-  .header  {
-        padding: 10px 40px;
+    .hero {
+        margin: 5% 5%;
     }
-    header h1 {
+    .hero h1 {
         font-size: 4em;
     }
 }
 
 @media screen and (max-width: 684px) {
-    nav {
-        justify-content: center;
-    }
-}
-
-
-@media screen and (max-width: 640px) {
-    .header {
-        padding: 8px 10px;
-    }
-    header h1 {
-        font-size: 3.5em;
+    .hero {
+        margin: 5% 10%;
     }
     nav {
         justify-content: center;
     }
     nav ul li {
         margin-top: 15px;
+        margin-bottom: 5px;
+    }
+}
+
+
+@media screen and (max-width: 640px) {
+    .hero h1 {
+        font-size: 3.5em;
+    }
+    nav {
+        justify-content: center;
     }
     #button-group {
-        grid-template-columns: repeat(2, 1fr); /* 2 columns */
+        grid-template-columns: repeat(2, 1fr);
         justify-content: center;
     }
 }
