--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,9 @@ body {
     color: whitesmoke;
     font-size: 1.6rem;
     font-family: Arial, sans-serif;
-    /* background-size: 10px 10px; */
-    background: linear-gradient(rgba(7, 11, 34, 0.9), rgba(7, 11, 34, 0.7)), 
-                url("../img/starry-sky.jpg");
-    /* background-image: url("../img/starry-sky.jpg"); */
+    background: linear-gradient(rgba(7, 11, 34, 0.9), rgba(7, 11, 34, 0.7)), url("../img/starry-sky.jpg");
     background-size: cover;
     background-position: center;
-    /* background-repeat: no-repeat; */
     background-attachment: fixed;
     background-color: #070b22;
 }
@@ -63,13 +59,13 @@ nav ul li {
     margin: 0 15px;
 }
 
-nav ul li a {
+.link, nav ul li a {
     text-decoration: none;
     color: #070b22;
     font-weight: bold;
 }
 
-nav ul li a:hover {
+.link:hover, nav ul li a:hover {
     transition: 0.3s;
     color: #f1af21;
     text-decoration: underline;
@@ -77,10 +73,7 @@ nav ul li a:hover {
 
 /* Hero Unit*/
 .hero {
-    align-items: center;
     margin: 2% 15%;
-    text-align: center;
-    background-color: transparent;
 }
 
 .hero h1 {
@@ -94,9 +87,18 @@ nav ul li a:hover {
 
 #button-group {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Default: 4 columns */
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     gap: 3vw 2vw;
-    margin: 30px 40px;
+    margin: 35px auto;
+    max-width: 80%;
+    justify-content: center;
+    grid-auto-flow: dense;
+}
+
+#button-group::after {
+    content: "";
+    display: block;
+    width: 120px;
 }
 
 .button {
@@ -116,12 +118,41 @@ nav ul li a:hover {
     justify-content: center;
 }
 
+/* Footer */
 
+.footer {
+    align-items: center;
+}
 
+/* Grid Layout for Footer */
+.footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Middle Section (Wider Box) */
+.footer-item {
+    padding-right: 5px;
+    padding-left: 5px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.footer img {
+    width: 50px; 
+    height: 50px;
+}
+
+@media (min-width: 1010px) { 
+    #button-group {
+        grid-template-columns: repeat(4, 1fr); /* Force exactly 4 columns */
+    }
+}
 
 @media screen and (max-width: 1120px) {
     .hero {
-        margin: 5% 5%;
+        margin: 5% 8%;
     }
     .hero h1 {
         font-size: 4em;
@@ -129,9 +160,6 @@ nav ul li a:hover {
 }
 
 @media screen and (max-width: 684px) {
-    .hero {
-        margin: 5% 10%;
-    }
     nav {
         justify-content: center;
     }
@@ -146,7 +174,7 @@ nav ul li a:hover {
     .hero h1 {
         font-size: 3.5em;
     }
-    nav {
+    nav.top {
         justify-content: center;
     }
     #button-group {
