Applying the hover effects found online to the planet buttons in the hero unit

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,24 +102,42 @@ nav ul li {
 }
 
 .button {
-    background-color: #d2bab0;
+    font-family: 'Inter', sans-serif;
+    background-color: #b6b8c7;
     border: none;
     color: #070b22;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
-    border-radius: 20px;
-    font-size: 1.3em;
-
-    width: 100%;
-    min-width: 120px;
     display: flex;
     justify-content: center;
+    border-radius: 15px;
+    font-size: 1.3em;
+    width: 100%;
+    min-width: 120px;
+    font-weight: 500;
+    --glow-color: #f3873f; /* Default color */
+    transition: transform 0.3s ease, box-shadow 0.3s ease, font-weight 0.3s;
 }
 
-/* Footer */
+.button:hover {
+    box-shadow: 0rem 0.99rem 0.43rem -0.33rem var(--glow-color);
+    transform: translateY(-0.5rem);
+    font-weight: 800;
+}
 
+/* Different colors for each button */
+.button.mercury { --glow-color: #f3dede; } 
+.button.venus   { --glow-color: #f4a261; } 
+.button.earth   { --glow-color: #2a9d8f; }
+.button.mars    { --glow-color: #e63946; } 
+.button.jupiter { --glow-color: #e9c46a; }
+.button.saturn  { --glow-color: #e872ce; } 
+.button.uranus  { --glow-color: #6fcfee; } 
+.button.neptune { --glow-color: #7c2688; }
+
+
+/* Footer */
 .footer {
     align-items: center;
 }
