--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
     color: whitesmoke;
     font-size: 1.6rem;
     font-family: Arial, sans-serif;
-    background: linear-gradient(rgba(7, 11, 34, 0.9), rgba(7, 11, 34, 0.7)), url("../img/starry-sky.jpg");
+    background: linear-gradient(rgba(7, 11, 34, 0.8), rgba(7, 11, 34, 0.7)), url("../img/starry-sky.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -144,15 +144,19 @@ nav ul li {
 .button.neptune { --glow-color: #7c2688; }
 
 
-.right {
+.planets {
     display: grid; 
     grid-template-columns: 1fr 2fr; 
     grid-gap: 10px; 
     align-items: center;
-    background-color: rgba(236, 236, 239, 0.4);
+    background-color: rgba(236, 236, 239, 0.35);
     padding: 20px 30px;
     margin: 3em 6em;
     color: #070b22;
+}
+
+.planets:nth-child(even) {
+    grid-template-columns: 2fr 1fr;
 }
 
 main img{
@@ -185,8 +189,8 @@ main .button {
     font-weight: bold;
     border: 3px solid whitesmoke;
     border-radius: 15px;
-    width: 15%;
-    min-width: 120px;
+    width: 8em;
+    min-width: 5em;
     padding: 1em;
     margin-top: 20px;
     justify-content: center;
@@ -195,8 +199,6 @@ main .button {
 main .button:hover {
     background: whitesmoke;
     color: #070b22;
-    width: 20%;
-    min-width: 120px;
     border: 3px solid #070b22;
 }
 
@@ -205,6 +207,12 @@ main .button:hover {
     padding-right: 3em;
     font-size: 1.1em;
 }
+
+/* #saturn-img {
+    transform: rotate(-20deg);
+    width: auto;
+    height: 300px; 
+} */
 
 
 /* Footer */
@@ -261,6 +269,18 @@ main .button:hover {
     nav ul li {
         margin-top: 15px;
     }
+    main img{
+        max-width: 300px;
+    }
+    .planets {
+        grid-template-columns: 1fr; /* Single column */
+        text-align: center;
+    }
+    .planets:nth-child(even) {
+        display: flex;
+        flex-direction: column-reverse; /* Reverses the order */
+        text-align: center;
+    }
 }
 
 
@@ -274,13 +294,6 @@ main .button:hover {
     #button-group {
         grid-template-columns: repeat(2, 1fr);
         justify-content: center;
-    }
-    .right {
-        grid-template-columns: 1fr; /* Single column */
-        text-align: center;
-    }
-    main img{
-        max-width: 250px;
     }
     .info {
         width: 100%;
