--- a/css/styles.css
+++ b/css/styles.css
@@ -3,17 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 html {
 	font-size: 62.5%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 
+                Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 1.15;
 }
+
 img {
 	width: 100%;
 	height: auto;
 }
+
+svg {
+    height: 100%;
+    width: 100%;
+    fill: currentColor;
+    pointer-events: none;
+}
+
 body {
     color: whitesmoke;
     font-size: 1.6rem;
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(rgba(7, 11, 34, 0.8), rgba(7, 11, 34, 0.7)), url("../img/starry-sky.jpg");
     background-size: cover;
     background-position: center;
@@ -143,7 +156,7 @@ nav ul li {
 .button.uranus  { --glow-color: #6fcfee; } 
 .button.neptune { --glow-color: #7c2688; }
 
-
+/* MAIN BODY */
 .planets {
     display: grid; 
     grid-template-columns: 1fr 2fr; 
@@ -273,13 +286,14 @@ main .button:hover {
         max-width: 300px;
     }
     .planets {
-        grid-template-columns: 1fr; /* Single column */
+        display: flex;
+        flex-direction: column; /* Reverses the order */
         text-align: center;
+        margin-left: 2em;
+        margin-right: 2em;
     }
     .planets:nth-child(even) {
-        display: flex;
         flex-direction: column-reverse; /* Reverses the order */
-        text-align: center;
     }
 }
 
