--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    --bg: 
+}
+
 html {
 	font-size: 62.5%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 
@@ -56,6 +60,13 @@ nav h1 {
     text-align: center;
     font-size: 1.4em;
 }
+
+.bi {
+    font-size: 1.5em;
+}
+/* .bi:hover{
+
+} */
 
 /* Logo and Title */
 .logo {
@@ -198,14 +209,13 @@ main .button {
     font-family: Inter, Poppins, Roboto, Lato, sans-serif;
     background: #070b22;
     color: whitesmoke;
-    font-size: 1.4em;
-    font-weight: bold;
+    font-size: 1em;
+    /* font-weight: bold; */
     border: 3px solid whitesmoke;
-    border-radius: 15px;
+    border-radius: 12rem;
     width: 8em;
-    min-width: 5em;
     padding: 1em;
-    margin-top: 20px;
+    margin-top: 25px;
     justify-content: center;
 }
 
@@ -213,6 +223,7 @@ main .button:hover {
     background: whitesmoke;
     color: #070b22;
     border: 3px solid #070b22;
+    transition: 0.3s;
 }
 
 .description {
