--- a/css/styles.css
+++ b/css/styles.css
@@ -1,304 +1,311 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-:root {
-    --bg: 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-	font-size: 62.5%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 
-                Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    line-height: 1.15;
+  font-size: 62.5%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.15;
 }
 
 img {
-	width: 100%;
-	height: auto;
+  width: 100%;
+  height: auto;
 }
 
 svg {
-    height: 100%;
-    width: 100%;
-    fill: currentColor;
-    pointer-events: none;
+  height: 100%;
+  width: 100%;
+  fill: currentColor;
+  pointer-events: none;
 }
 
 body {
-    color: whitesmoke;
-    font-size: 1.6rem;
-    font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(rgba(7, 11, 34, 0.8), rgba(7, 11, 34, 0.7)), url("../img/starry-sky.jpg");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    background-color: #070b22;
+  color: whitesmoke;
+  font-size: 1.6rem;
+  font-family: Inter, Poppins, Roboto, Lato, sans-serif;
+  background: linear-gradient(rgba(7, 11, 34, 0.8), rgba(7, 11, 34, 0.7)),
+    url("../img/starry-sky.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-color: #070b22;
 }
-h1, h2 { font-family:"Coiny", 'Segoe UI', Geneva, Verdana, sans-serif; }
+
+h1,
+h2 {
+  font-family: "Oxanium", "Segoe UI", Geneva, Verdana, sans-serif;
+  font-weight: 600;
+}
 
 /* Header Styling */
 nav {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgba(236, 236, 239, 0.6);
-    padding: 15px 30px;
-    margin: 2em 3em;
-    color: #070b22;
-    font-weight: bold;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(236, 236, 239, 0.6);
+  padding: 15px 30px;
+  margin: 2em 3em;
+  color: #070b22;
+  font-weight: bold;
 }
 
-nav h1 {
-    font-size: 1.9em;
-}
+nav h1 { font-size: 1.9em; }
 
 #preview {
-    text-align: center;
-    font-size: 1.4em;
+  text-align: center;
+  font-size: 1.4em;
 }
 
-.bi {
-    font-size: 1.5em;
-}
-/* .bi:hover{
-
-} */
+.bi { font-size: 1.5em; }
 
 /* Logo and Title */
 .logo {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .logo img {
-    height: 50px; 
-    width: auto;
-    /* margin-right: 15px; */
+  height: 50px;
+  width: auto;
 }
 
 /* Navigation Menu */
-nav ul {
-    display: flex;
-}
+nav ul { display: flex; }
 
 nav ul li {
-    margin: 0 15px;
-    text-align: center;
+  margin: 0 15px;
+  text-align: center;
+  position: relative;
 }
 
-.link, nav ul li a {
-    text-decoration: none;
-    color: #070b22;
-    font-weight: bold;
+.link,
+nav ul li a {
+  text-decoration: none;
+  color: #070b22;
 }
 
-.link:hover, nav ul li a:hover {
-    transition: 0.3s;
-    color: #df9b07;
-    text-decoration: underline;
-    text-shadow: 1px 1px 5px #070b22;
+.link:hover,
+nav ul li a:hover {
+  transition: 0.3s;
+  color: #df9b07;
+  text-decoration: underline;
+  text-shadow: 1px 1px 5px #070b22;
+}
+
+.tooltip {
+    position: absolute;
+    bottom: -22px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(7, 11, 34, 0.8);
+    color: whitesmoke;
+    padding: 2px 6px;
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: 400;
+    white-space: nowrap;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+ul li a:hover .tooltip {
+    visibility: visible;
+    opacity: 0.9;
 }
 
 /* Hero Unit*/
 .hero { margin: 2% 15%; }
 
 .hero h1 {
-    color: #df9b07;
-    font-size: 5em;
-    /* font-weight: bold; */
-    text-align: center;
-    justify-content: center;
+  color: #df9b07;
+  font-size: 5em;
+  text-align: center;
+  justify-content: center;
 }
 
 #button-group {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    gap: 3vw 2vw;
-    margin: 35px auto;
-    max-width: 80%;
-    justify-content: center;
-    grid-auto-flow: dense;
-}
-
-#button-group::after {
-    content: "";
-    display: block;
-    width: 120px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  gap: 3vw 2vw;
+  margin: 35px auto;
+  max-width: 80%;
+  justify-content: center;
+  grid-auto-flow: dense;
 }
 
 .hero .button {
-    font-family: Inter, Poppins, Roboto, Lato, sans-serif;
-    background-color: #b6b8c7;
-    border: none;
-    color: #070b22;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    border-radius: 15px;
-    font-size: 1.3em;
-    width: 100%;
-    min-width: 120px;
-    font-weight: 500;
-    --glow-color: #f3873f; /* Default color */
-    transition: transform 0.3s ease, box-shadow 0.3s ease, font-weight 0.3s;
+  background-color: #b6b8c7;
+  border: none;
+  color: #070b22;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+   border-radius: 12rem;
+  font-size: 1.3em;
+  width: 100%;
+  min-width: 120px;
+  font-weight: 500;
+  --glow-color: #f3873f; /* Default color */
+  transition: transform 0.3s ease, box-shadow 0.3s ease, font-weight 0.3s;
 }
 
 .hero .button:hover {
-    box-shadow: 0rem 0.99rem 0.43rem -0.33rem var(--glow-color);
-    transform: translateY(-0.5rem);
-    font-weight: 800;
+  box-shadow: 0rem 0.99rem 0.43rem -0.33rem var(--glow-color);
+  transform: scale(1.05);
 }
-/* transparent width to fix resizing? */
 
 /* Different colors for each button */
-.button.mercury { --glow-color: #f3dede; } 
-.button.venus   { --glow-color: #f4a261; } 
-.button.earth   { --glow-color: #2a9d8f; }
-.button.mars    { --glow-color: #e63946; } 
-.button.jupiter { --glow-color: #e9c46a; }
-.button.saturn  { --glow-color: #e872ce; } 
-.button.uranus  { --glow-color: #6fcfee; } 
-.button.neptune { --glow-color: #7c2688; }
+.button.mercury, #Mercury img { --glow-color: #f3dede; }
+.button.venus, #Venus img { --glow-color: #f19950; }
+.button.earth, #Earth img{ --glow-color: #374aa9; }
+.button.mars, #Mars img { --glow-color: #e2432e; }
+.button.jupiter, #Jupiter img { --glow-color: #e5bd58; }
+.button.saturn, #Saturn img { --glow-color: #e872ce; }
+.button.uranus, #Uranus img { --glow-color: #6fcfee; }
+.button.neptune, #Neptune img { --glow-color: #7c2688; }
 
 /* MAIN BODY */
 .planets {
-    display: grid; 
-    grid-template-columns: 1fr 2fr; 
-    grid-gap: 10px; 
-    align-items: center;
-    background-color: rgba(236, 236, 239, 0.35);
-    padding: 20px 30px;
-    margin: 3em 6em;
-    color: #070b22;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 10px;
+  align-items: center;
+  background-color: rgba(236, 236, 239, 0.35);
+  padding: 20px 30px;
+  margin: 3em 6em;
+  color: #070b22;
 }
 
-.planets:nth-child(even) {
-    grid-template-columns: 2fr 1fr;
+.planets:nth-child(even) { grid-template-columns: 2fr 1fr; }
+
+main img {
+  width: 100%;
+  max-width: 400px;
+  min-width: 200px;
+  height: auto;
 }
 
-main img{
-    width: 100%;
-    max-width: 400px;
-    min-width: 200px;
-    height: auto;
+.planets img { transition: transform 0.5s ease-in-out; }
+
+.planets img:hover {
+  transform: rotate(10deg) scale(1.1);
+  filter: drop-shadow(0 0 20px var(--glow-color));
 }
 
 .info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* text-align: center; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 main h2 {
-    font-size: 2.8em;
-    /* font-weight: bold; */
-    margin-bottom: 15px;
+  font-size: 2.8em;
+  margin-bottom: 15px;
 }
 
 main .button {
-    display: flex;
-    font-family: Inter, Poppins, Roboto, Lato, sans-serif;
-    background: #070b22;
-    color: whitesmoke;
-    font-size: 1em;
-    /* font-weight: bold; */
-    border: 3px solid whitesmoke;
-    border-radius: 12rem;
-    width: 8em;
-    padding: 1em;
-    margin-top: 25px;
-    justify-content: center;
+  display: flex;
+  color: #070b22;
+  background-color: rgba(7, 11, 34, 0.1);
+  font-size: 1em;
+  font-weight: bold;
+  border: 3px solid #070b22;
+  border-radius: 12rem;
+  width: 10em;
+  padding: 1em;
+  margin-top: 25px;
+  justify-content: center;
+  transition: background-color 0.3s ease, border 0.3s ease, color 0.3s ease;
 }
 
 main .button:hover {
-    background: whitesmoke;
-    color: #070b22;
-    border: 3px solid #070b22;
-    transition: 0.3s;
+  background-color: rgba(7, 11, 34, 1);
+  border: 3px solid whitesmoke;
+  color: whitesmoke;
 }
 
 .description {
-    padding-left: 3em;
-    padding-right: 3em;
-    font-size: 1.2em;
+  padding-left: 3em;
+  padding-right: 3em;
+  font-size: 1.2em;
 }
-
 
 /* Footer */
-.footer {
-    align-items: center;
-}
+.footer { align-items: center; }
 
 .footer-item {
-    padding-right: 5px;
-    padding-left: 5px;
-    font-weight: bold;
-    text-align: center;
+  padding-right: 5px;
+  padding-left: 5px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .footer img {
-    width: 50px; 
-    height: 50px;
+  width: 50px;
+  height: 50px;
 }
 
-@media (min-width: 1010px) { 
-    #button-group { grid-template-columns: repeat(4, 1fr); }
+@media (min-width: 1010px) {
+  #button-group { grid-template-columns: repeat(4, 1fr); }
 }
 
 @media screen and (max-width: 1120px) {
-    .hero { margin: 5% 8%; }
-    .hero h1 { font-size: 4em; }
+  .hero { margin: 5% 8%; }
+  .hero h1 { font-size: 4em; }
 }
 
 @media screen and (max-width: 850px) {
-    .description {
-        padding-left: 1em;
-        padding-right: 1em;
-    }
-    .planets {
-        margin-left: 2em;
-        margin-right: 2em;
-    }
+  .description {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+  .planets {
+    margin-left: 2em;
+    margin-right: 2em;
+  }
 }
 
 @media screen and (max-width: 740px) {
-    nav { 
-        justify-content: space-between; 
-        margin-left: 1em;
-        margin-right: 1em;
-        flex-direction: column;
-    }
-    nav ul li { margin-top: 15px; }
-    main img{ max-width: 300px; }
-    .footer-item { margin-bottom: 10px; }
+  nav {
+    justify-content: space-between;
+    margin-left: 1em;
+    margin-right: 1em;
+    flex-direction: column;
+  }
+  nav ul li { 
+    margin-top: 15px; 
+    margin-bottom: 12px;
+  }
+  main img { max-width: 300px; }
+  .footer-item { margin-bottom: 10px; }
 }
 
 @media screen and (max-width: 640px) {
-    .planets {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
-    .planets:nth-child(even) { flex-direction: column-reverse; }
+  .planets {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .planets:nth-child(even) { flex-direction: column-reverse; }
 
-    .description {
-        font-size: 1.2em;
-    }
+  .description { font-size: 1.2em; }
 
-    .hero h1 { font-size: 3.5em; }
-    /* nav.top { justify-content: center; } */
-    #button-group {
-        grid-template-columns: repeat(2, 1fr);
-        justify-content: center;
-    }
-    .info { width: 100%; }
+  .hero h1 { font-size: 3.5em; }
+  
+  .info { width: 100%; }
+
+  #button-group {
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+  }
 }
